# LabProgrammazione

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  FinestraView.cpp  FinestraView.h  Observer.h  README.md  Subject.h  TabellaModel.cpp  TabellaModel.h  main.cpp
test/: CMakeLists.txt  ControllerFixture.cpp  TabellaModelTest.cpp  eseguiTest.cpp
